# cpp_english

./: .gitignore  CMakeLists.txt  README.md  guess_word_vs2022.sln  guess_word_vs2022.vcxproj  guess_word_vs2022.vcxproj.filters  words.txt
.github/workflows/: build.yml
include/: ConsoleUtil.h  Draw.h  GuessGame.h
src/: ConsoleUtil.cpp  Draw.cpp  GuessGame.cpp  main.cpp
